Make login feature connect to mysql with JPA and use database to verify; create register function to let people sign in, with JPA also.